--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
         "@vueuse/core": "^12.8.2",
+        "animejs": "^4.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
+        "marked": "^16.3.0",
+        "pdfjs-dist": "^5.4.149",
         "reka-ui": "^2.4.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
+        "three": "^0.180.0",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13"
     }
