--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,12 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-# Hugging Face AI Configuration
-HUGGINGFACE_API_KEY=your_huggingface_api_key_here
-HUGGINGFACE_MODEL=microsoft/DialoGPT-medium
+# AI Configuration - Ollama is now configured and working!
+# Leave HUGGINGFACE_API_KEY empty to use Ollama by default
+HUGGINGFACE_API_KEY=
+HUGGINGFACE_MODEL=deepseek-r1:8b
+HUGGINGFACE_STREAM=false
+
+# Ollama server configuration (already working at http://72.61.21.143:11434)
+# OLLAMA_HOST=72.61.21.143:11434
+# OLLAMA_MODEL=deepseek-r1:1.5b
